# ouroboros-workspace-bridge

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  SECURITY.md  install.ps1  install.sh  main.py  pyproject.toml  server.py
browser/: ouroboros-companion.user.js
docs/: phase-7-plan.md  troubleshooting.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: check_all.sh  command_bundle_review_server.py  command_bundle_runner.py  command_bundle_watcher.py  dev_session.ps1  dev_session.sh  focus_review_url.py  run_ngrok.sh  run_server.sh  session_env.sh  smoke_check.py  update_version_info.py
terminal_bridge/: __init__.py  approval_modes.py  backups.py  browsing.py  bundle_serialization.py  bundle_watcher.py  bundles.py  cli.py  commands.py  config.py  handoffs.py  mcp_intents.py  mcp_runtime.py  merge_queue.py  merge_queue_apply.py  models.py  operations.py  patches.py  payloads.py  review_audit.py  review_intents.py  review_layout.py  review_notifications.py  runtime_storage.py  safety.py  session_supervisor.py  setup_ui.py  storage.py  task_cleanup_apply.py  task_cleanup_preview.py  task_merge_orchestration.py  task_orchestration_summary.py  task_validation_proposal.py  task_validation_result.py  task_workspaces.py  tasks.py  tool_calls.py  trash.py  truncation.py  version.py
tests/: test_action_bundle_atomic.py  test_approval_modes.py  test_bundle_watcher.py  test_cli.py  test_companion_action_intent_staging.py  test_duplicate_bundle_approval_ui.py  test_handoffs.py  (+17 more)
(+36 files in other folders)
